# logly

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  environment.yml  logly.sh  pyproject.toml  release.sh  setup.py  test_concurrency.py  versioning.sh
.github/workflows/: build.yml  ci.yml  linux.yml  macos.yml  release.yml
config/: logly.yaml
logly/: __init__.py  __main__.py  cli.py
logly/collectors/: README.md  __init__.py  base_collector.py  log_parser.py  network_monitor.py  system_metrics.py  tracer_collector.py
logly/core/: README.md  __init__.py  aggregator.py  config.py  scheduler.py
logly/exporters/: README.md  __init__.py  csv_exporter.py  json_exporter.py  report_generator.py
logly/query/: README.md  __init__.py  analysis_engine.py  issue_detector.py  models.py  query_builder.py
logly/storage/: README.md  __init__.py  models.py  schema.sql  sqlite_store.py
logly/tracers/: README.md  __init__.py  error_tracer.py  event_tracer.py  ip_tracer.py  network_tracer.py  process_tracer.py
logly/utils/: __init__.py  create_db.py  db_size.py  logger.py  paths.py  system_storage.py
requirements/: requirements-dev.txt  requirements.txt
systemd/: logly.service
tests/: README.md  conftest.py
tests/e2e/: test_e2e_disaster_recovery.py  test_e2e_monitoring_scenarios.py
tests/integration/: test_integration_config_cli.py  test_integration_scheduler.py  test_integration_store_collectors.py
tests/unit/: test_aggreagtor.py  test_analysis_engine.py  test_base_collector.py  test_cli.py  test_config.py  test_create_db.py  test_paths.py  (+18 more)
