[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logly"
version = "0.1.0"
description = "Lightweight log aggregation and system monitoring for AWS EC2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ryan O'Boyle"}
]
keywords = ["logging", "monitoring", "aws", "ec2", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# Dependencies are managed in requirements/requirements.txt
dependencies = [
    "pyyaml>=6.0",
]

# Dev dependencies are managed in requirements/requirements-dev.txt
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
logly = "logly.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logly*"]
